# fuchuang

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  QUICKSTART.md  README.md  VAD.py  _test_html_importer.py  audio_inference.py  fraud_detection.db  main.py  requirements.txt  run_system.py  start.sh  stop.sh  testmail.py
.claude/: settings.local.json
anti_fraud_app/: .env.example  README.md  pubspec.yaml
audio_module/: main.py
backend/: README.md  app.py  auth.py  database.py  email_notifier.py  fraud_detection.db  language_prompts.py  main.py  model_warmup.py  notification_recipients.py  requirements.txt  risk_guardrails.py  schemas.py
config/: external_case_sources.yaml  fast_warning_rules.json  intervention_cfg.json  llm.yaml  photo_types.seed.yaml  rag.yaml  report_generation_cfg.json  risk_assessment_cfg.json
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
multimodal_input/: README.md  config.py  langgraph_integration.py  main.py  requirements.txt  run_multimodal.py
rag/: .gitignore  README.md  pyproject.toml
rag/configs/: photo_types.seed.yaml  sources.example.yaml
rag/src/fraud_rag/: cli.py  config.py  crawler.py  detector.py  html_importer.py  http_client.py  index.py  models.py  pipeline.py  text.py  utils.py
scripts/: analyze_db.py  ingest_cases.py  merge_db.py  pack.sh  test_rag_simple.py
src/: main.py
test/: test_case_ingestor_auto_update.py  test_crawler_local_case_sources.py  test_critical_fraud_guardrails.py  test_external_case_sync.py  (+15 more)
(+177 files in other folders)
